--- a/Cheater1.ipynb
+++ b/Cheater1.ipynb
@@ -42,8 +42,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(9, 0), (9, 3), (13, 1), (11, 3), (10, 1), (9, 2), (14, 0), (14, 2)]\n",
-      "[(11, 1), (14, 1), (13, 0), (10, 0), (14, 3), (10, 3), (13, 2), (10, 2)]\n"
+      "[(12, 1), (9, 3), (10, 1), (13, 0), (14, 0), (13, 3), (10, 3), (9, 1)]\n",
+      "[(9, 0), (11, 0), (12, 0), (9, 2), (12, 3), (14, 3), (10, 0), (14, 2)]\n"
      ]
     }
    ],
@@ -400,115 +400,119 @@
      "output_type": "stream",
      "text": [
       "Player (1): Player A received:\n",
-      "[(11, 1), (9, 3), (13, 1), (9, 2), (13, 3), (14, 3), (10, 0), (10, 2)]\n",
+      "[(13, 1), (12, 0), (11, 3), (12, 3), (14, 0), (13, 3), (12, 2), (9, 1)]\n",
       "Player (2): OUR player received:\n",
-      "[(12, 1), (11, 0), (14, 1), (12, 0), (10, 1), (14, 0), (10, 3), (9, 1)]\n",
+      "[(9, 3), (14, 1), (13, 0), (9, 2), (11, 2), (14, 3), (10, 0), (14, 2)]\n",
       "\n",
       "\n",
       "==== CURRENT STATE ================================\n",
-      "==== Player A MOVES ====\n",
+      "==== OUR player MOVES ====\n",
       "Player (0): Player A hand:\n",
-      "[(11, 1), (9, 3), (13, 1), (9, 2), (13, 3), (14, 3), (10, 0), (10, 2)]\n",
+      "[(13, 1), (12, 0), (11, 3), (12, 3), (14, 0), (13, 3), (12, 2), (9, 1)]\n",
       "Player (1): OUR player hand:\n",
-      "[(12, 1), (11, 0), (14, 1), (12, 0), (10, 1), (14, 0), (10, 3), (9, 1)]\n",
+      "[(9, 3), (14, 1), (13, 0), (9, 2), (11, 2), (14, 3), (10, 0), (14, 2)]\n",
       "Pile: \n",
       "[]\n",
       "Declared top card:\n",
       "None\n",
       "\n",
-      "[+] Player A puts (11, 1) and declares (11, 1)\n",
-      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "\n",
-      "\n",
-      "==== CURRENT STATE ================================\n",
-      "==== OUR player MOVES ====\n",
-      "Player (0): Player A hand:\n",
-      "[(9, 3), (13, 1), (9, 2), (13, 3), (14, 3), (10, 0), (10, 2)]\n",
-      "Player (1): OUR player hand:\n",
-      "[(12, 1), (11, 0), (14, 1), (12, 0), (10, 1), (14, 0), (10, 3), (9, 1)]\n",
-      "Pile: \n",
-      "[(11, 1)]\n",
-      "Declared top card:\n",
-      "(11, 1)\n",
-      "\n",
-      "[+] OUR player puts (11, 0) and declares (11, 0)\n",
-      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "\n",
-      "\n",
-      "==== CURRENT STATE ================================\n",
-      "==== Player A MOVES ====\n",
-      "Player (0): Player A hand:\n",
-      "[(9, 3), (13, 1), (9, 2), (13, 3), (14, 3), (10, 0), (10, 2)]\n",
-      "Player (1): OUR player hand:\n",
-      "[(12, 1), (14, 1), (12, 0), (10, 1), (14, 0), (10, 3), (9, 1)]\n",
-      "Pile: \n",
-      "[(11, 1), (11, 0)]\n",
-      "Declared top card:\n",
-      "(11, 0)\n",
-      "\n",
-      "[+] Player A puts (13, 3) and declares (13, 3)\n",
-      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "\n",
-      "\n",
-      "==== CURRENT STATE ================================\n",
-      "==== OUR player MOVES ====\n",
-      "Player (0): Player A hand:\n",
-      "[(9, 3), (13, 1), (9, 2), (14, 3), (10, 0), (10, 2)]\n",
-      "Player (1): OUR player hand:\n",
-      "[(12, 1), (14, 1), (12, 0), (10, 1), (14, 0), (10, 3), (9, 1)]\n",
-      "Pile: \n",
-      "[(11, 1), (11, 0), (13, 3)]\n",
-      "Declared top card:\n",
-      "(13, 3)\n",
-      "\n",
-      "[+] OUR player puts (14, 0) and declares (14, 0)\n",
-      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "\n",
-      "\n",
-      "==== CURRENT STATE ================================\n",
-      "==== Player A MOVES ====\n",
-      "Player (0): Player A hand:\n",
-      "[(9, 3), (13, 1), (9, 2), (14, 3), (10, 0), (10, 2)]\n",
-      "Player (1): OUR player hand:\n",
-      "[(12, 1), (14, 1), (12, 0), (10, 1), (10, 3), (9, 1)]\n",
-      "Pile: \n",
-      "[(11, 1), (11, 0), (13, 3), (14, 0)]\n",
-      "Declared top card:\n",
-      "(14, 0)\n",
-      "\n",
-      "[+] Player A puts (14, 3) and declares (14, 3)\n",
-      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
-      "\n",
-      "\n",
-      "==== CURRENT STATE ================================\n",
-      "==== OUR player MOVES ====\n",
-      "Player (0): Player A hand:\n",
-      "[(9, 3), (13, 1), (9, 2), (10, 0), (10, 2)]\n",
-      "Player (1): OUR player hand:\n",
-      "[(12, 1), (14, 1), (12, 0), (10, 1), (10, 3), (9, 1)]\n",
-      "Pile: \n",
-      "[(11, 1), (11, 0), (13, 3), (14, 0), (14, 3)]\n",
-      "Declared top card:\n",
-      "(14, 3)\n",
-      "\n",
-      "[+] OUR player puts (14, 1) and declares (14, 1)\n",
+      "[+] OUR player puts (9, 3) and declares (9, 3)\n",
       "[!] Player A: I want to check\n",
       "\tYou are wrong!\n",
-      "Feedback = OUR player : checked this turn = True; I checked = False; I drew cards = False; revealed card = None; number of taken cards = 3\n",
-      "Feedback = Player A : checked this turn = True; I checked = True; I drew cards = True; revealed card = (14, 1); number of taken cards = 3\n",
+      "Feedback = OUR player : checked this turn = True; I checked = False; I drew cards = False; revealed card = None; number of taken cards = 1\n",
+      "Feedback = Player A : checked this turn = True; I checked = True; I drew cards = True; revealed card = (9, 3); number of taken cards = 1\n",
       "Cards taken: \n",
-      "[(14, 0), (14, 3), (14, 1)]\n"
+      "[(9, 3)]\n",
+      "\n",
+      "\n",
+      "==== CURRENT STATE ================================\n",
+      "==== Player A MOVES ====\n",
+      "Player (0): Player A hand:\n",
+      "[(13, 1), (12, 0), (11, 3), (12, 3), (14, 0), (13, 3), (12, 2), (9, 1), (9, 3)]\n",
+      "Player (1): OUR player hand:\n",
+      "[(14, 1), (13, 0), (9, 2), (11, 2), (14, 3), (10, 0), (14, 2)]\n",
+      "Pile: \n",
+      "[]\n",
+      "Declared top card:\n",
+      "None\n",
+      "\n",
+      "[+] Player A puts (12, 0) and declares (12, 0)\n",
+      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "\n",
+      "\n",
+      "==== CURRENT STATE ================================\n",
+      "==== OUR player MOVES ====\n",
+      "Player (0): Player A hand:\n",
+      "[(13, 1), (11, 3), (12, 3), (14, 0), (13, 3), (12, 2), (9, 1), (9, 3)]\n",
+      "Player (1): OUR player hand:\n",
+      "[(14, 1), (13, 0), (9, 2), (11, 2), (14, 3), (10, 0), (14, 2)]\n",
+      "Pile: \n",
+      "[(12, 0)]\n",
+      "Declared top card:\n",
+      "(12, 0)\n",
+      "\n",
+      "[+] OUR player puts (13, 0) and declares (13, 0)\n",
+      "[!] Player A: I want to check\n",
+      "\tYou are wrong!\n",
+      "Feedback = OUR player : checked this turn = True; I checked = False; I drew cards = False; revealed card = None; number of taken cards = 2\n",
+      "Feedback = Player A : checked this turn = True; I checked = True; I drew cards = True; revealed card = (13, 0); number of taken cards = 2\n",
+      "Cards taken: \n",
+      "[(12, 0), (13, 0)]\n",
+      "\n",
+      "\n",
+      "==== CURRENT STATE ================================\n",
+      "==== Player A MOVES ====\n",
+      "Player (0): Player A hand:\n",
+      "[(13, 1), (11, 3), (12, 3), (14, 0), (13, 3), (12, 2), (9, 1), (9, 3), (12, 0), (13, 0)]\n",
+      "Player (1): OUR player hand:\n",
+      "[(14, 1), (9, 2), (11, 2), (14, 3), (10, 0), (14, 2)]\n",
+      "Pile: \n",
+      "[]\n",
+      "Declared top card:\n",
+      "None\n",
+      "\n",
+      "[+] Player A puts (13, 0) and declares (12, 2)\n",
+      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "\n",
+      "\n",
+      "==== CURRENT STATE ================================\n",
+      "==== OUR player MOVES ====\n",
+      "Player (0): Player A hand:\n",
+      "[(13, 1), (11, 3), (12, 3), (14, 0), (13, 3), (12, 2), (9, 1), (9, 3), (12, 0)]\n",
+      "Player (1): OUR player hand:\n",
+      "[(14, 1), (9, 2), (11, 2), (14, 3), (10, 0), (14, 2)]\n",
+      "Pile: \n",
+      "[(13, 0)]\n",
+      "Declared top card:\n",
+      "(12, 2)\n",
+      "\n",
+      "[+] OUR player puts (14, 1) and declares (14, 1)\n",
+      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "\n",
+      "\n",
+      "==== CURRENT STATE ================================\n",
+      "==== Player A MOVES ====\n",
+      "Player (0): Player A hand:\n",
+      "[(13, 1), (11, 3), (12, 3), (14, 0), (13, 3), (12, 2), (9, 1), (9, 3), (12, 0)]\n",
+      "Player (1): OUR player hand:\n",
+      "[(9, 2), (11, 2), (14, 3), (10, 0), (14, 2)]\n",
+      "Pile: \n",
+      "[(13, 0), (14, 1)]\n",
+      "Declared top card:\n",
+      "(14, 1)\n",
+      "\n",
+      "[+] Player A puts (14, 0) and declares (14, 0)\n",
+      "Feedback = Player A : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n",
+      "Feedback = OUR player : checked this turn = False; I checked = False; I drew cards = False; revealed card = None; number of taken cards = None\n"
      ]
     }
    ],
    "source": [
     "player1 = RandomPlayer(\"Player A\")\n",
-    "from nazwisko import Nazwisko\n",
+    "from cicha_mak import Nazwisko\n",
     "player2 = Nazwisko(\"OUR player\")\n",
     "game = Game([player1, player2])\n",
     "\n",
@@ -566,9 +570,9 @@
      "output_type": "stream",
      "text": [
       "Wins all:\n",
-      "[ 7.478 92.522]\n",
+      "[ 7.506 92.494]\n",
       "Max:\n",
-      "[0, 100]\n"
+      "[1, 99]\n"
      ]
     }
    ],
